objects/Ecom_Coupon_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ecom Coupon Contacts</relationshipLabel>
        <relationshipName>Ecom_Coupon_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Contact_Type__c</fullName>
        <label>Coupon Contact Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Coupon__c</fullName>
        <label>Ecom Coupon</label>
        <referenceTo>Ecom_Coupon__c</referenceTo>
        <relationshipLabel>Ecom Coupon Contacts</relationshipLabel>
        <relationshipName>Ecom_Coupon_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ecom_Max_Number_Of_Use__c</fullName>
        <label>Max Number Of Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ecom Coupon Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECON-{000000}</displayFormat>
        <label>Coupon Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecom Coupon Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>